tests/passes/well-formed/main-ref-cell.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/main-ref-cell.futil
7 |    ref m = std_const(2,1);
  |    ^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: ref cells are not allowed for main component
